# gpai_core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gpai.repos  gpai.ssh.repos
.github/workflows/: pr-build.yaml
src/core/gpai_geometry/: CMakeLists.txt  package.xml
src/core/gpai_geometry/include/gpai_geometry/: primitives.hpp  visibility_control.h
src/core/gpai_geometry/src/: primitives.cpp
src/core/gpai_geometry/test/: test_primitives.cpp
src/core/gpai_interfaces/: CMakeLists.txt  package.xml
src/core/gpai_interfaces/msg/: SemanticObject.msg
src/core/rclcpp_gpai/: CMakeLists.txt  package.xml
src/core/rclcpp_gpai/include/rclcpp_gpai/: rclcpp_gpai.hpp  visibility_control.hpp
src/core/rclcpp_gpai/src/: rclcpp_gpai.cpp
tools/docker/: Dockerfile  apt-packages  docker-compose.yml  enter.sh  entrypoint  start.sh
